Added path fixes for files

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -53,7 +53,7 @@
           <div class="auto-container">
             <nav class="nav-bar">
               <div class="logo">
-                <img src="/assets/header-logo.png" alt="" />
+                <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
                 <ul style="margin: 0">
@@ -62,7 +62,7 @@
                       id="home"
                       class="active-link home-color .main-a"
                       style="color: #0092ff"
-                      href="/index.html"
+                      href="./index.html"
                       ><span>Home</span></a
                     >
                   </li>
@@ -70,7 +70,7 @@
                     <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
-                        <a href="/pages/softwaredev.html"
+                        <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Software Development</span
@@ -78,13 +78,13 @@
                         >
                       </li>
                       <li>
-                        <a href="/pages/AdvancedTech.html"
+                        <a href="./AdvancedTech.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advanced Tech</span></a
                         >
                       </li>
                       <li>
-                        <a href="/pages/maintenance.html"
+                        <a href="./maintenance.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Maintenance and Support</span
@@ -92,7 +92,7 @@
                         >
                       </li>
                       <li>
-                        <a href="/pages/advisory.html"
+                        <a href="./advisory.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advisory</span></a
                         >
@@ -168,13 +168,13 @@
                     <p>Our Active Member</p>
                   </div>
                   <div class="about-3-img">
-                    <img class="about-3" src="/assets/about/about-3.jpg" />
+                    <img class="about-3" src="../assets/about/about-3.jpg" />
                   </div>
                 </div>
                 <div class="img-contents">
                   <div class="about-4-img">
                     <div class="about-img-hover"></div>
-                    <img class="about-4" src="/assets/about/about-4.jpg" />
+                    <img class="about-4" src="../assets/about/about-4.jpg" />
                   </div>
                 </div>
               </div>
@@ -197,14 +197,18 @@
                 </div>
                 <div class="about-clear-row">
                   <div class="about-clear-col">
-                    <div class="icon-div"><i class="fa-regular fa-lightbulb"></i></div>
+                    <div class="icon-div">
+                      <i class="fa-regular fa-lightbulb"></i>
+                    </div>
                     <h6>Automobile Manufacturing</h6>
                     <div class="about-one-block-text">
                       Fusce eu eros nec felis venenatis fermentum sit amet eget
                     </div>
                   </div>
                   <div class="about-clear-col">
-                    <div class="icon-div"><i class="fa-regular fa-lightbulb"></i></div>
+                    <div class="icon-div">
+                      <i class="fa-regular fa-lightbulb"></i>
+                    </div>
                     <h6>Automobile Manufacturing</h6>
                     <div class="about-one-block-text">
                       Fusce eu eros nec felis venenatis fermentum sit amet eget
@@ -226,31 +230,31 @@
           <div class="sponcers">
             <div class="owl-carousel owl-theme">
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
               <div class="item">
-                <img src="/assets/clients/1.png" alt="" />
+                <img src="../assets/clients/1.png" alt="" />
               </div>
             </div>
           </div>
@@ -295,9 +299,11 @@
             <div class="clients-col">
               <div class="client-card">
                 <div class="upper-part">
-                  <div class="quote-symbol"><i class="fa-solid fa-quote-left"></i></div>
+                  <div class="quote-symbol">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
                   <div class="profile-pic">
-                    <img src="/assets/clients/author-2.jpg" alt="" />
+                    <img src="../assets/clients/author-2.jpg" alt="" />
                   </div>
                   <div class="quote-text">
                     Nam ultricies sed leolet eget vehic. Sed varius non magna
@@ -306,7 +312,7 @@
                   </div>
                 </div>
                 <div class="lower-part">
-                  <h6 >Ruksana Rahman Maya</h6>
+                  <h6>Ruksana Rahman Maya</h6>
                   <div class="quote-div">Brand Designer</div>
                 </div>
               </div>
@@ -314,9 +320,11 @@
             <div class="clients-col">
               <div class="client-card">
                 <div class="upper-part">
-                  <div class="quote-symbol"><i class="fa-solid fa-quote-left"></i></div>
+                  <div class="quote-symbol">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
                   <div class="profile-pic">
-                    <img src="/assets/clients/author-2.jpg" alt="" />
+                    <img src="../assets/clients/author-2.jpg" alt="" />
                   </div>
                   <div class="quote-text">
                     Nam ultricies sed leolet eget vehic. Sed varius non magna
@@ -325,7 +333,7 @@
                   </div>
                 </div>
                 <div class="lower-part">
-                  <h6 >Ruksana Rahman Maya</h6>
+                  <h6>Ruksana Rahman Maya</h6>
                   <div class="quote-div">Brand Designer</div>
                 </div>
               </div>
@@ -333,9 +341,11 @@
             <div class="clients-col">
               <div class="client-card">
                 <div class="upper-part">
-                  <div class="quote-symbol"><i class="fa-solid fa-quote-left"></i></div>
+                  <div class="quote-symbol">
+                    <i class="fa-solid fa-quote-left"></i>
+                  </div>
                   <div class="profile-pic">
-                    <img src="/assets/clients/author-2.jpg" alt="" />
+                    <img src="../assets/clients/author-2.jpg" alt="" />
                   </div>
                   <div class="quote-text">
                     Nam ultricies sed leolet eget vehic. Sed varius non magna
@@ -344,7 +354,7 @@
                   </div>
                 </div>
                 <div class="lower-part">
-                  <h6 >Ruksana Rahman Maya</h6>
+                  <h6>Ruksana Rahman Maya</h6>
                   <div class="quote-div">Brand Designer</div>
                 </div>
               </div>
@@ -352,7 +362,7 @@
           </div>
         </div>
       </section>
-      <section class="team-members" style="margin-top: 100px;">
+      <section class="team-members" style="margin-top: 100px">
         <div class="auto-container">
           <div class="gallery-title">
             <h3 class="sec-title-gallery">
@@ -369,7 +379,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="/assets/teams/nithya.jpeg"
+                    src="../assets/teams/nithya.jpeg"
                     alt=""
                   />
                   <div
@@ -388,7 +398,11 @@
               </div>
               <div class="team-col">
                 <div class="team-image-div">
-                  <img class="team-img" src="/assets/teams/chinju.jpg" alt="" />
+                  <img
+                    class="team-img"
+                    src="../assets/teams/chinju.jpg"
+                    alt=""
+                  />
                   <div
                     class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
                   >
@@ -407,7 +421,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="/assets/teams/vargees.jpg"
+                    src="../assets/teams/vargees.jpg"
                     alt=""
                   />
                   <div
@@ -452,10 +466,10 @@
               <div class="footer-widget-links">
                 <h4 class="footer-title">Service Links</h4>
                 <ul class="main-footer-list">
-                  <li><a href="#">Software Development</a></li>
-                  <li><a href="#">Advanced Tech</a></li>
-                  <li><a href="#">Maintenance and Support</a></li>
-                  <li><a href="#">Advisory</a></li>
+                  <li><a href="./softwaredev.html">Software Development</a></li>
+                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
             </div>
@@ -496,7 +510,7 @@
         <span></span>
       </div>
       <ul class="sidebar-menu">
-        <li><img src="/assets/header-logo.png" alt="" /></li>
+        <li><img src="../assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="#">Home</a></li>
         <li><a id="Service-sidebar" href="#">Services</a></li>
         <li><a href="#">Technologies</a></li>
@@ -550,6 +564,6 @@
           }
       })
     </script>
-    <script src="/js/about.js"></script>
+    <script src="../js/about.js"></script>
   </body>
 </html>
