--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -53,7 +53,7 @@
           <div class="auto-container">
             <nav class="nav-bar">
               <div class="logo">
-                <img src="/assets/header-logo.png" alt="" />
+                <img src="../assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
                 <ul style="margin: 0">
@@ -70,7 +70,7 @@
                     <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
-                        <a href="/pages/softwaredev.html"
+                        <a href="./softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Software Development</span
@@ -78,13 +78,13 @@
                         >
                       </li>
                       <li>
-                        <a href="/pages/AdvancedTech.html"
+                        <a href="./AdvancedTech.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advanced Tech</span></a
                         >
                       </li>
                       <li>
-                        <a href="/pages/maintenance.html"
+                        <a href="./maintenance.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Maintenance and Support</span
@@ -92,7 +92,7 @@
                         >
                       </li>
                       <li>
-                        <a href="/pages/advisory.html"
+                        <a href="./advisory.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advisory</span></a
                         >
@@ -163,7 +163,7 @@
             <div class="content-col">
               <img
                 class="main-img"
-                src="/assets/projects/project-1.jpg"
+                src="../assets/projects/project-1.jpg"
                 alt=""
               />
               <div class="lower-content">
@@ -203,7 +203,7 @@
                   <div class="lower-content-col">
                     <img
                       class="lower-content-img"
-                      src="/assets/projects/project-2.jpg"
+                      src="../assets/projects/project-2.jpg"
                       alt=""
                     />
                   </div>
@@ -236,10 +236,10 @@
               <div class="widget-content">
                 <h6>Services List</h6>
                 <ul class="service-list-tab">
-                  <li><a href="/pages/softwaredev.html">Software Development</a></li>
-                  <li><a href="/pages/AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="/pages/maintenance.html">Maintenance and Support</a></li>
-                  <li><a href="/pages/advisory.html">Advisory</a></li>
+                  <li><a href="./softwaredev.html">Software Development</a></li>
+                  <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
+                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
               <div class="widget-content">
@@ -351,7 +351,7 @@
         <span></span>
       </div>
       <ul class="sidebar-menu">
-        <li><img src="/assets/header-logo.png" alt="" /></li>
+        <li><img src="../assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="#">Home</a></li>
         <li><a id="Service-sidebar" href="#">Services</a></li>
         <li><a href="#">Technologies</a></li>
@@ -405,6 +405,6 @@
           }
       })
     </script>
-    <script src="/js/about.js"></script>
+    <script src="../js/about.js"></script>
   </body>
 </html>
