--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <link
       rel="stylesheet"
@@ -58,7 +58,7 @@
           <div class="auto-container">
             <nav class="nav-bar">
               <div class="logo">
-                <img src="/assets/header-logo.png" alt="" />
+                <img src="./assets/header-logo.png" alt="" />
               </div>
               <div class="menu-list">
                 <ul style="margin: 0">
@@ -75,7 +75,7 @@
                     <a href="#" class="main-a">Services</a>
                     <ul class="services-list">
                       <li>
-                        <a href="/pages/softwaredev.html"
+                        <a href="./pages/softwaredev.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Software Development</span
@@ -83,13 +83,13 @@
                         >
                       </li>
                       <li>
-                        <a href="/pages/AdvancedTech.html"
+                        <a href="./pages/AdvancedTech.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advanced Tech</span></a
                         >
                       </li>
                       <li>
-                        <a href="/pages/maintenance.html"
+                        <a href="./pages/maintenance.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span"
                             >Maintenance and Support</span
@@ -97,7 +97,7 @@
                         >
                       </li>
                       <li>
-                        <a href="/pages/advisory.html"
+                        <a href="./pages/advisory.html"
                           ><span class="icon-span">⤥</span
                           ><span class="text-span">Advisory</span></a
                         >
@@ -164,7 +164,7 @@
             <div class="home-col image-container">
               <img
                 id="moving-home-image"
-                src="/assets/header-image.png"
+                src="./assets/header-image.png"
                 alt=""
               />
             </div>
@@ -181,7 +181,7 @@
                     <i class="fa-solid fa-laptop-code"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/softwaredev.html">Software Development</a>
+                    <a href="./pages/softwaredev.html">Software Development</a>
                   </h4>
                   <p class="text-card">
                     Industry specific custom Software development solution for
@@ -201,7 +201,7 @@
                     <i class="fa-solid fa-robot"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/AdvancedTech.html">Advanced Tech</a>
+                    <a href="./pages/AdvancedTech.html">Advanced Tech</a>
                   </h4>
                   <p class="text-card">
                     Our advanced technology features Artificial Intelligence and
@@ -220,7 +220,7 @@
                     <i class="fa-regular fa-circle-question"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/maintenance.html">Maintenance & Support</a>
+                    <a href="./pages/maintenance.html">Maintenance & Support</a>
                   </h4>
                   <p class="text-card">
                     Our Maintenance & Support offer top quality well organised
@@ -239,7 +239,7 @@
                     <i class="fa-solid fa-screwdriver-wrench"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/advisory.html">Advisory</a>
+                    <a href="./pages/advisory.html">Advisory</a>
                   </h4>
                   <p class="text-card">
                     Having a right advices from experts and services makes your
@@ -259,7 +259,7 @@
                     <i class="fa-solid fa-laptop-code"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/softwaredev.html">Software Development</a>
+                    <a href="./pages/softwaredev.html">Software Development</a>
                   </h4>
                   <p class="text-card">
                     Industry specific custom Software development solution for
@@ -279,7 +279,7 @@
                     <i class="fa-solid fa-robot"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/AdvancedTech.html">Advanced Tech</a>
+                    <a href="./pages/AdvancedTech.html">Advanced Tech</a>
                   </h4>
                   <p class="text-card">
                     Our advanced technology features Artificial Intelligence and
@@ -298,7 +298,7 @@
                     <i class="fa-regular fa-circle-question"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/maintenance.html">Maintenance & Support</a>
+                    <a href="./pages/maintenance.html">Maintenance & Support</a>
                   </h4>
                   <p class="text-card">
                     Our Maintenance & Support offer top quality well organised
@@ -317,7 +317,7 @@
                     <i class="fa-solid fa-screwdriver-wrench"></i>
                   </div>
                   <h4 class="card-heading">
-                    <a href="/pages/advisory.html">Advisory</a>
+                    <a href="./pages/advisory.html">Advisory</a>
                   </h4>
                   <p class="text-card">
                     Having a right advices from experts and services makes your
@@ -337,13 +337,13 @@
       </section>
       <section class="aboutus-sect" id="aboutus-sect">
         <div class="fixed-img">
-          <img src="/assets/bg/pattern-2.png" alt="" />
+          <img src="./assets/bg/pattern-2.png" alt="" />
         </div>
         <div class="auto-container">
           <div class="aboutus-row">
             <div class="aboutus-col">
               <div class="img-contain">
-                <img src="/assets/details-1.png" alt="" />
+                <img src="./assets/details-1.png" alt="" />
               </div>
             </div>
             <div class="aboutus-col">
@@ -363,7 +363,7 @@
                   tech industry.
                 </p>
                 <div class="aboutus-btn">
-                  <a href="/pages/aboutus.html">About Us</a>
+                  <a href="./pages/aboutus.html">About Us</a>
                 </div>
               </div>
             </div>
@@ -386,7 +386,7 @@
           <div class="owl-carousel owl-theme">
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -395,7 +395,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -404,7 +404,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -413,7 +413,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -422,7 +422,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -431,7 +431,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -440,7 +440,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -449,7 +449,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -458,7 +458,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -467,7 +467,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -476,7 +476,7 @@
             </div>
             <div class="gal-card item">
               <div class="top-hover-div">
-                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <img class="gal-img" src="./assets/gallery/1.jpg" alt="" />
                 <div class="gradient-text">
                   <p>Security, Design</p>
                   <h2>Software Application</h2>
@@ -503,7 +503,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="/assets/teams/nithya.jpeg"
+                    src="./assets/teams/nithya.jpeg"
                     alt=""
                   />
                   <div
@@ -522,7 +522,7 @@
               </div>
               <div class="team-col">
                 <div class="team-image-div">
-                  <img class="team-img" src="/assets/teams/chinju.jpg" alt="" />
+                  <img class="team-img" src="./assets/teams/chinju.jpg" alt="" />
                   <div
                     class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3"
                   >
@@ -541,7 +541,7 @@
                 <div class="team-image-div">
                   <img
                     class="team-img"
-                    src="/assets/teams/vargees.jpg"
+                    src="./assets/teams/vargees.jpg"
                     alt=""
                   />
                   <div
@@ -755,7 +755,7 @@
             <div class="tech-card">
               <div class="tech-up">
                 <img
-                  src="/assets/technologies/artificial-intelligence.png"
+                  src="./assets/technologies/artificial-intelligence.png"
                   alt=""
                 />
               </div>
@@ -765,7 +765,7 @@
             </div>
             <div class="tech-card">
               <div class="tech-up">
-                <img src="/assets/technologies/MachineLearning.png" alt="" />
+                <img src="./assets/technologies/MachineLearning.png" alt="" />
               </div>
               <div class="tech-down">
                 <h3>Machine Learning</h3>
@@ -773,7 +773,7 @@
             </div>
             <div class="tech-card">
               <div class="tech-up">
-                <img src="/assets/technologies/Deep-learning.png" alt="" />
+                <img src="./assets/technologies/Deep-learning.png" alt="" />
               </div>
               <div class="tech-down">
                 <h3>Deep Learning</h3>
@@ -781,7 +781,7 @@
             </div>
             <div class="tech-card">
               <div class="tech-up">
-                <img src="/assets/technologies/electron js.png" alt="" />
+                <img src="./assets/technologies/electron js.png" alt="" />
               </div>
               <div class="tech-down">
                 <h3>Electron.Js</h3>
@@ -789,7 +789,7 @@
             </div>
             <div class="tech-card">
               <div class="tech-up">
-                <img src="/assets/technologies/nlp.png" alt="" />
+                <img src="./assets/technologies/nlp.png" alt="" />
               </div>
               <div class="tech-down">
                 <h3>Natural Language Processing</h3>
@@ -886,7 +886,7 @@
         <span></span>
       </div>
       <ul class="sidebar-menu">
-        <li><img src="/assets/header-logo.png" alt="" /></li>
+        <li><img src="./assets/header-logo.png" alt="" /></li>
         <li><a id="home-sidebar" href="#">Home</a></li>
         <li class="service-li">
           <a id="Service-sidebar" href="#">Services</a>
@@ -949,6 +949,6 @@
           }
       })
     </script>
-    <script src="/js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
