fixed sidebar closer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     ></script>
   </head>
   <body>
-    <!-- <div class="sidebar-closer"></div> -->
+    <div class="sidebar-closer"></div>
     <div class="content">
       <!-- header section  -->
       <section id="home-page" class="home-page">
