--- a/pages/AdvancedTech.html
+++ b/pages/AdvancedTech.html
@@ -42,9 +42,11 @@
       src="https://example.com/fontawesome/v6.4.2/js/fontawesome.js"
       data-auto-replace-svg="nest"
     ></script>
-    <title>SciPy |  Advanced Tech</title>
+    <title>SciPy | Advanced Tech</title>
   </head>
   <body>
+    <div class="sidebar-closer"></div>
+
     <div class="content">
       <!-- header section  -->
 
@@ -169,10 +171,24 @@
               <div class="lower-content">
                 <h3>Advanced Tech</h3>
                 <p>
-                  Amalgamation of Intelligence and Mathematics to empower the autonomous world.We can make your system in a automatic way. Autonomous Analytic model building that enriches the productivity and scale up your bussiness.We are helping to hand over sectors for building the better one. Augment your imaginations, we support various B2B(business to business) and B2C (Business to Consumer) commercial activities,particularly for the retail industry.
+                  Amalgamation of Intelligence and Mathematics to empower the
+                  autonomous world.We can make your system in a automatic way.
+                  Autonomous Analytic model building that enriches the
+                  productivity and scale up your bussiness.We are helping to
+                  hand over sectors for building the better one. Augment your
+                  imaginations, we support various B2B(business to business) and
+                  B2C (Business to Consumer) commercial activities,particularly
+                  for the retail industry.
                 </p>
                 <p>
-                  Hybrid automation technologiy to accurate performance and productivity. we provide bot system for efficent resource utilization. Our IOT systems enables you to connect, organize, monitor and control your bussiness and technological asseta for wider resourse utilization and better efficiency. Simulated experience that can be similar to or complete different from real world. we provide wide ranges of ways in virtual reality
+                  Hybrid automation technologiy to accurate performance and
+                  productivity. we provide bot system for efficent resource
+                  utilization. Our IOT systems enables you to connect, organize,
+                  monitor and control your bussiness and technological asseta
+                  for wider resourse utilization and better efficiency.
+                  Simulated experience that can be similar to or complete
+                  different from real world. we provide wide ranges of ways in
+                  virtual reality
                 </p>
                 <h6>Our Success JOURNEY We can Provide.</h6>
                 <p>
@@ -220,7 +236,9 @@
                 <ul class="service-list-tab">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
@@ -291,7 +309,9 @@
                 <ul class="main-footer-list">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
