--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -45,6 +45,8 @@
     <title>SciPy | About Us</title>
   </head>
   <body>
+    <div class="sidebar-closer"></div>
+
     <div class="content">
       <!-- header section  -->
 
@@ -468,7 +470,9 @@
                 <ul class="main-footer-list">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
@@ -511,9 +515,10 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="../assets/header-logo.png" alt="" /></li>
-        <li><a id="home-sidebar" href="#">Home</a></li>
+        <li><a id="home-sidebar" href="../index.html">Home</a></li>
         <li><a id="Service-sidebar" href="#">Services</a></li>
         <li><a href="#">Technologies</a></li>
+        <li><a href="#">Careers</a></li>
         <li><a id="About-us-sidebar" href="#">About</a></li>
         <li><a id="contact-sidebar" href="#">Contact</a></li>
       </ul>
