--- a/pages/maintenance.html
+++ b/pages/maintenance.html
@@ -45,6 +45,8 @@
     <title>SciPy | Maintenance and Support</title>
   </head>
   <body>
+    <div class="sidebar-closer"></div>
+
     <div class="content">
       <!-- header section  -->
 
