--- a/pages/softwaredev.html
+++ b/pages/softwaredev.html
@@ -45,6 +45,8 @@
     <title>SciPy | Software Development</title>
   </head>
   <body>
+    <div class="sidebar-closer"></div>
+
     <div class="content">
       <!-- header section  -->
 
@@ -238,7 +240,9 @@
                 <ul class="service-list-tab">
                   <li><a href="./softwaredev.html">Software Development</a></li>
                   <li><a href="./AdvancedTech.html">Advanced Tech</a></li>
-                  <li><a href="./maintenance.html">Maintenance and Support</a></li>
+                  <li>
+                    <a href="./maintenance.html">Maintenance and Support</a>
+                  </li>
                   <li><a href="./advisory.html">Advisory</a></li>
                 </ul>
               </div>
