Added careers page

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                     >
                   </li>
                   <li>
-                    <a href="#" class="active-link">Careers</a>
+                    <a href="./pages/careers.html" id="Careers-link" class="active-link"
+                      >Careers</a
+                    >
                   </li>
                   <li>
                     <a id="About-us" class="active-link" href="#">About Us</a>
@@ -997,7 +999,7 @@
         </li>
 
         <li><a id="tech-sidebar" href="#">Technologies</a></li>
-        <li><a href="#">Careers</a></li>
+        <li><a href="./pages/careers.html">Careers</a></li>
         <li><a id="About-us-sidebar" href="#">About</a></li>
         <li><a id="contact-sidebar" href="#">Contact</a></li>
       </ul>
